# server_client_study

./: CMakeLists.txt  build.sh  debug.sh
client/include/: client.h
client/src/: CMakeLists.txt  client.cc  main.cc
include/: socket_thread.h
lib/include/: client.h  server.h  socket_common.h
lib/src/: CMakeLists.txt  client.cc  server.cc
server/: CMakeLists.txt
server/include/: server.h
server/src/: CMakeLists.txt  main.cc  server.cc
src/: CMakeLists.txt  socket_thread.cc
